# classy

./: .breakpoints  .replit  README.md  db.py  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.parcel-cache/: d818ffee17c67429.txt  lock.mdb
static/css/: input.css  tailwind.css
static/icons/: browserconfig.xml  site.webmanifest
static/js/: leon-src.js  leon.js
templates/: index.pug  layout.pug  login.pug  navbar.pug  register.pug
